--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,17 @@ body{
     margin: 0;
     padding: 0;
 }
+/* #main{
+    width: 95%;
+} */
 #root1{
-    width: 60%;
+    width: 80%;
     text-align: center;
     margin: 10px;
 }
 
 #root{
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -18,14 +21,15 @@ body{
     margin: auto;
 }
 .category{
+    justify-content: center;
     text-align: center;
     font-style: italic;
     color: rgb(56, 107, 151);
-    margin-left: 6%;
+    margin-left: 5%;
 }
 #root button{
    width: 40%;
-   padding: 10px 0;
+   padding: 2% 0;
     background-color: rgb(91, 125, 155);
     margin: 2%;
     border: none;
@@ -33,7 +37,7 @@ body{
 
 }
 #btns-alphabet{
-    width: 50%;
+    width: 100%;
     display: flex;   
     flex-direction: row;
     flex-wrap: nowrap;
@@ -44,20 +48,20 @@ body{
     text-align: center;
 }
 .alphabet{
-    padding: 15px;
-    margin: 10px 10px 0  0;
+    padding: 2%;
+    margin: 1% 1% 0 0;
     background-color:rgb(91, 125, 155)  ;
     border-radius: 5px;
     outline: none;
 }
 #main{
-    width: 50vw;
-    height: 50vh;
+    width: 60vw;
+    height: 70vh;
     margin: auto;
 }
 #hangman{
     width: 100%;
-    height: 300px;
+    padding: 20% 0;
     display: none;
     position: relative;
      background-image: url("../img/fon.jpeg");
@@ -66,8 +70,8 @@ body{
     background-size: cover; 
 } 
 #hang1{
-    width: 200px;
-    height: 250px;
+    width: 25%;
+    padding: 15% 0;
     position: absolute;
     top: 13%;
     left: 15%;
@@ -78,11 +82,11 @@ body{
     display: none;
 }
 #hang2{
-    width: 22px;
-    height: 59px;
+    width: 3%;
+    padding: 4% 0;
     position: absolute;
-    top: 19%;
-    left: 32%;
+    top: 18%;
+    left: 24%;
     background-image: url("../img/string.jpeg");
     background-position: center;
     background-size: cover;
@@ -90,11 +94,11 @@ body{
     display: none;
 }
 #hang3{
-    width: 50px;
-    height: 50px;
+    width: 7%;
+    padding: 3% 0;
     position: absolute;
     top: 25%;
-    left: 29%;
+    left: 22%;
     background-image: url("../img/head.jpeg");
     background-position: center;
     background-size: cover;
@@ -102,11 +106,11 @@ body{
     display: none;
 }
 #hang4{
-    width: 71px;
-    height: 39px;
+    width: 8%;
+    padding: 3% 1% 2% 0%;
     position: absolute;
-    top: 41%;
-    left: 26%;
+    top: 40%;
+    left: 21%;
     background-image: url("../img/body.jpeg");
     background-position: center;
     background-size: cover;
@@ -114,11 +118,12 @@ body{
     display: none;
 }
 #hang5{
-    width: 39px;
-    height: 29px;
+    width: 2%;
+    padding: 2% 1% 2% 2%;
+    /* height: 29px; */
     position: absolute;
-    top: 52%;
-    left: 30%;
+    top: 51%;
+    left: 23%;
     background-image: url("../img/short.jpeg");
     background-position: center;
     background-size: cover;
@@ -126,11 +131,12 @@ body{
     display: none;
 }
 #hang6{
-    width: 15px;
-    height: 29px;
+    width: 2%;
+    padding: 2% 0% 2% 0%;
+    /* height: 29px; */
     position: absolute;
-    top: 45%;
-    left: 24%;
+    top: 44%;
+    left: 20%;
     background-image: url("../img/leftarm.jpeg");
     background-position: center;
     background-size: cover;
@@ -138,11 +144,12 @@ body{
     display: none;
 }
 #hang7{
-    width: 15px;
-    height: 29px;
+    width: 2%;
+    /* height: 29px; */
+    padding: 2% 0;
     position: absolute;
-    top: 45%;
-    left: 42%;
+    top: 44%;
+    left: 29%;
     background-image: url("../img/rightarm.jpeg");
     background-position: center;
     background-size: cover;
@@ -150,11 +157,12 @@ body{
     display: none;
 }
 #hang8{
-    width: 16px;
-    height: 26px;
+    width: 2%;
+    padding: 2% 0;
+    /* height: 26px; */
     position: absolute;
-    top: 61%;
-    left: 30%;
+    top: 60%;
+    left: 23%;
     background-image: url("../img/leftleg.jpeg");
     background-position: center;
     background-size: cover;
@@ -162,11 +170,12 @@ body{
     display: none;
 }
 #hang9{
-    width: 16px;
-    height: 26px;
+    width: 2%;
+    /* height: 26px; */
+    padding: 2% 0;
     position: absolute;
-    top: 61%;
-    left: 36%;
+    top: 60%;
+    left: 26%;
     background-image: url("../img/rightleg.jpeg");
     background-position: center;
     background-size: cover;
